tests/ft/type_checking/invalid/fmt.jk
"formatting integer as bool {15.fmt_bool()}"
